--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -1,2 +1,44 @@
-
+/* shared styling */
+.body{
+    font-weight: 800;
+    font-family: "Open Sans", system-ui;
+    /* font-optical-sizing: auto; */
+    /* font-style: normal; */
+}
+.text-yellow{
+    color: #FD6E0A;
+}
+.button-primary{
+    font-size: 20px;
+    font-weight: 600;
+    color: beige;
+    padding: 20px 30px;
+    border: 0;
+    border-radius: 5px;
+    background-color: #FD6E0A;
+}
+/* nav styling start */
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.nav-title{
+    color: black;
+    font-size: 45px;
+    font-weight: 700;
+}
+nav>ul{
+    display: flex;
+    align-items: center;
+}
+nav li{
+    list-style: none;
+    margin-right: 20px;
+}
+nav ul li a{
+    color: black;
+    text-decoration: none;
+}
+/* nav styling end */
 
