--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -54,11 +54,19 @@ nav ul li a{
     background-repeat: no-repeat;
     background-position: bottom right;
     box-shadow: 2px 2px 5px 2px rgb(143, 81, 81);
+    
+    /* padding-left: 15px; */
 }
 .banner{
+    background-image: url('../images/developer.png');
+    background-size: 80px;
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-left: 15px; 
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    /* border: 2px solid; */
 }
 .banner-content{
     max-width: 600px;
@@ -93,6 +101,7 @@ main{
 }
 .section{
     gap: 100px;
+    margin-bottom: 0px;
 }
 .section-title{
     text-align: center;
@@ -104,6 +113,7 @@ main{
     border-radius: 5px;
     padding: 60px 110px;
     margin:  100px 40px;
+    
     text-align: justify;
     background-color: #FFF8F3;
     /* border: 2px solid; */
