main responsive adjustment

--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -282,7 +282,7 @@ input,textarea{
     .what-i-do{
         /* border: 2px solid;
         max-width: 1140px; */
-        padding: 10px 0px;
+        padding: 10px;
         margin:  30px 10px;
     }
     .what-i-do .section-desc{
