--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -263,7 +263,7 @@ input,textarea{
     .section-title{
         font-size: 2.5em;
     }
-    /* about section styling start */
+    /* about section responsive */
     .about{
         border-radius: 5px;
         padding: 30px 10px;
@@ -316,4 +316,27 @@ input,textarea{
         gap: 30px;
         
     }
+    /* footer responsive styling */
+    footer{
+        flex-direction: column;
+        padding: 10px;
+        margin: 10px;
+        gap: 20px;
+    }
+    footer .section-title{
+        font-size: 2em;
+    }
+    .footer-column{
+        width: 90%;
+        margin: 10px;
+        padding: 10px;
+    }
+    .social-media-links{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    input,textarea{
+        width: 88%;
+    }
+    
 }
