--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -394,6 +394,21 @@ input,textarea{
 }
 /* medium devices */
 @media screen and (min-width:576px) and (max-width:990px) {
+    /* nav responsive start */
+    nav{
+        /* border: 2px solid red; */
+        margin: 0px 50px 0px 150px;
+    }
+    .banner-button{
+        padding: 0px;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .banner-button button{
+        font-size: .8em;
+        padding: 10px 3px;
+        margin-right: 10px;
+    }
     /* main section responsive */
     .section-title{
         font-size: 2.5em;
