--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -324,6 +324,9 @@ input,textarea{
         margin:  50px 10px;
         /* border: 2px solid red; */
     }
+    .about .section-desc{
+        padding: 30px;
+    }
     .about-info-container{
         display: grid;
         gap: 20px;
