--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -412,6 +412,9 @@ input,textarea{
         padding: 10px 3px;
         margin-right: 10px;
     }
+    .banner-image{
+        width: 400px;
+    } 
     /* main section responsive */
     .section-title{
         font-size: 2.5em;
